feat: package chdb native resources with toolchain